--- a/join/authentication/templates/users/user-profile.html
+++ b/join/authentication/templates/users/user-profile.html
@@ -25,50 +25,78 @@
     </section>
     <div class="clearfix"></div>
     <!--end section-->
-    <section class="sec-padding">
+    <section class="sec-padding sec-padding-6">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 col-sm-12 col-xs-12 section-white">
-            <div class="pages-sidebar-item">
+          <div class="col-md-6">
+            <div class="col-md-12">
+              {% thumbnail user.picture "740x740" crop="center" as picture %}
+                <img alt="" class="img-responsive" src="{{ picture.url }}"/>
+              {% endthumbnail %}
+            </div>
+            <!--end item-->
+          </div>
+          <!--end left col-->
+          <div class="col-md-6 col-sm-12 col-xs-12 section-white">
+            <div class="pages-sidebar-item" style="margin-bottom: 15px;">
               <h5 class="uppercase pages-sidebar-item-title">{{ user.profession }}</h5>
+              <p>{{ user.brief_introduction }}</p>
               <ul class="port-project-info">
-                <li><span>{% trans "Proyectos Vistos" %}:</span> {{ user.project_views_count }}</li>
-                <li><span>{% trans "Likes" %}:</span> {{ user.likes_count }}</li>
-                <li><span>{% trans "Followers" %}:</span> {{ user.followers_count }}</li>
-                <li><span>{% trans "Following" %}:</span> {{ user.following_count }}</li>
+                <li><span>Nombre</span> {{ user.get_full_name }}</li>
+                <li><span>Joined</span> {{ user.date_joined | date }}</li>
+                <li><span>Skills</span> PSD / HTML5 / CSS3</li>
+                  <ul class="social-icons h-anim-rotate socila-sm">
+                    {% if user.facebook_profile %}
+                      <li class="hover-facebook">
+                        <a href="{{ user.get_facebook_profile_url }}">
+                          <i aria-hidden="true" class="fa fa-facebook"></i>
+                        </a>
+                      </li>
+                    {% endif %}
+                    {% if user.twitter_profile %}
+                      <li class="hover-twitter">
+                        <a href="{{ user.get_twitter_profile_url }}">
+                          <i aria-hidden="true" class="fa fa-twitter"></i>
+                        </a>
+                      </li>
+                    {% endif %}
+                    {% if user.instagram_profile %}
+                      <li class="hover-instagram">
+                        <a href="{{ user.get_instagram_profile_url }}">
+                          <i aria-hidden="true" class="fa fa-instram"></i>
+                        </a>
+                      </li>
+                    {% endif %}
+                    {% if user.linkedin_profile %}
+                      <li class="hover-linkedin">
+                        <a href="{{ user.get_linkedin_profile_url }}">
+                          <i aria-hidden="true" class="fa fa-linkedin"></i>
+                        </a>
+                      </li>
+                    {% endif %}
+                    {% if user.youtube_profile %}
+                      <li class="hover-youtube">
+                        <a href="{{ user.get_youtube_profile_url }}">
+                          <i aria-hidden="true" class="fa fa-youtube"></i>
+                        </a>
+                      </li>
+                    {% endif %}
+                  </ul>
               </ul>
             </div>
             <!--end item holder-->
-            <div class="pages-sidebar-item">
-              <h5 class="uppercase pages-sidebar-item-title">{% trans "Mis Proyectos" %}</h5>
-              {% for project in user.my_projects.all %}
-                <div class="col-md-12 col-sm-12 col-xs-12 nopadding">
-                  <div class="imgbox-small left">
-                    {% thumbnail project.images.first.file "80x80" crop="center" as project_image %}
-                      <img alt="" class="img-responsive" src="{{ project_image.url }}"/>
-                    {% endthumbnail %}
-                  </div>
-                  <div class="text-box-right">
-                    <h6 class="uppercase nopadding"><a class="text-hover-gyellow" href="#">{{ project.title }}</a></h6>
-                    <div class="blog-post-info padding-top-1"> <span> By Benjamin</span> <span> 15 Comments</span> </div>
-                  </div>
-                </div>
-              {% endfor %}
-              <!--end post-->
-            </div>
-            <!--end item holder-->
             {% if user.skills.exists %}
-              <div class="pages-sidebar-item">
+              <div class="pages-sidebar-item" style="margin-bottom: 25px;">
                 <h5 class="uppercase pages-sidebar-item-title">{% trans "Habilidades" %}</h5>
                 <ul class="pages-tags">
-                  {% for skill in user.skills %}
+                  {% for skill in user.skills.all %}
                     <li><a href="#">{{ skill.title }}</a></li>
                   {% endfor %}
                 </ul>
               </div>
             {% endif %}
             {% if user.interests.exists %}
-              <div class="pages-sidebar-item">
+              <div class="pages-sidebar-item" style="margin-bottom: 25px;">
                 <h5 class="uppercase pages-sidebar-item-title">{% trans "Intereses" %}</h5>
                 <ul class="pages-tags">
                   {% for interest in user.interests.all %}
@@ -78,104 +106,66 @@
               </div>
             {% endif %}
             <!--end item holder-->
-            <div class="pages-sidebar-item">
-              <h5 class="uppercase pages-sidebar-item-title">Proyectos en los que participo</h5>
-              <ul class="sidebar-works">
-                {% for project in user.projects.all %}
-                  <li><a href="#">
-                    {% thumbnail project.images.first.file "120x120" crop="center" as project_image %}
-                      <img alt="" class="img-responsive" src="{{ project_image.url }}"/>
-                    {% endthumbnail %}
-                  </a></li>
-                {% endfor %}
-              </ul>
-            </div>
-            <!--end item holder-->
-          </div>
-          <!--end left col-->
-          <div class="col-md-8">
-            <div class="col-md-12">
-              {% thumbnail user.picture "740x740" crop="center" as picture %}
-                <img alt="" class="img-responsive" src="{{ picture.url }}"/>
-              {% endthumbnail %}
-            </div>
-            <!--end item-->
-            <div class="col-divider-margin-6"></div>
-            <div class="col-md-12">
-              <ul class="port-project-info">
-                <li><span>Nombre</span> {{ user.get_full_name }}</li>
-                <li><span>Joined</span> {{ user.date_joined | date }}</li>
-                <li><span>Profesión:</span> {{ user.profession }}</li>
-                <li><span>Skills:</span> PSD / HTML5 / CSS3</li>
-              </ul>
-              <div class="clearfix"></div>
-              <ul class="social-icons h-anim-rotate socila-sm">
-                {% if user.facebook_profile %}
-                <li class="hover-facebook">
-                  <a href="{{ user.get_facebook_profile_url }}">
-                    <i aria-hidden="true" class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                {% endif %}
-                {% if user.twitter_profile %}
-                <li class="hover-twitter">
-                  <a href="{{ user.get_twitter_profile_url }}">
-                    <i aria-hidden="true" class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                {% endif %}
-                {% if user.instagram_profile %}
-                <li class="hover-instagram">
-                  <a href="{{ user.get_instagram_profile_url }}">
-                    <i aria-hidden="true" class="fa fa-instram"></i>
-                  </a>
-                </li>
-                {% endif %}
-                {% if user.linkedin_profile %}
-                <li class="hover-linkedin">
-                  <a href="{{ user.get_linkedin_profile_url }}">
-                    <i aria-hidden="true" class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-                {% endif %}
-                {% if user.youtube_profile %}
-                <li class="hover-youtube">
-                  <a href="{{ user.get_youtube_profile_url }}">
-                    <i aria-hidden="true" class="fa fa-youtube"></i>
-                  </a>
-                </li>
-                {% endif %}
-              </ul>
-            </div>
-            <!--end item-->
-            <div class="clearfix"></div>
-            <br/><br/>
-            <div class="col-md-12">
-              <h4>Acerca de mí</h4>
-              <p>{{ user.brief_introduction }}</p>
-            </div>
-            <!--end item-->
           </div>
           <!--end right col-->
         </div>
       </div>
     </section>
-    <div class="clearfix"></div>
-    <!-- end section -->
-    <section class="section-primary">
-      <div class="container">
-        <div class="divider-line solid light opacity-1"></div>
-        <div class="row sec-padding-6">
-          <ul class="clients-list grid-cols-5 hover-7 noborder">
-            <li><a href="#"><img alt="" src="http://via.placeholder.com/225x120"/></a></li>
-            <li><a href="#"><img alt="" src="http://via.placeholder.com/225x120"/></a></li>
-            <li><a href="#"><img alt="" src="http://via.placeholder.com/225x120"/></a></li>
-            <li><a href="#"><img alt="" src="http://via.placeholder.com/225x120"/></a></li>
-            <li><a href="#"><img alt="" src="http://via.placeholder.com/225x120"/></a></li>
-          </ul>
+    {% if user.has_projects %}
+      <section class="sec-bpadding-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12 nopadding">
+              <div class="sec-title-container less-padding-5 text-center">
+                <h4 class="uppercase font-weight-7 less-mar-1">PROYECTOS</h4>
+                <div class="sp-title-line-1"></div>
+              </div>
+            </div>
+            <div class="clearfix"></div>
+            <!--end title-->
+
+            {% for project in user.my_projects.all %}
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="sp-feature-box-3 margin-bottom">
+                  <a href="{% url "detail_project_view" project.id %}">
+                    <div class="img-box">
+                      {% thumbnail project.images.first.file "600x700" crop="center" as im %}
+                        <img src="{{ im.url }}" alt="" class="img-responsive"/>
+                      {% endthumbnail %}
+                      <div class="clearfix"></div>
+                      <br/>
+                      <h5 class="less-mar-1">{{ project.title }}</h5>
+                      <p>{{ project.brief_description }}</p>
+                      <br/>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            {% endfor %}
+            {% for project in user.projects.all %}
+              <div class="col-md-3 col-sm-6 col-xs-12">
+                <div class="sp-feature-box-3 margin-bottom">
+                  <a href="{% url "detail_project_view" project.id %}">
+                    <div class="img-box">
+                      <div class="badge">CREADOR</div>
+                      {% thumbnail project.images.first.file "600x700" crop="center" as im %}
+                        <img src="{{ im.url }}" alt="" class="img-responsive"/>
+                      {% endthumbnail %}
+                      <div class="clearfix"></div>
+                      <br/>
+                      <h5 class="less-mar-1">{{ project.title }}</h5>
+                      <p>{{ project.brief_description }}</p>
+                      <br/>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            {% endfor %}
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+    {% endif %}
+    <!-- end section -->
     <div class="clearfix"></div>
     <!-- end section -->
     <div class="section-dark sec-padding">
@@ -243,7 +233,8 @@
                   <div class="post-info"> <span>By John Doe</span><span>May 15</span> </div>
                 </div>
               </div>
-              </br></div>
+              </br>
+            </div>
           </div>
           <!--end item-->
           <div class="col-md-3 col-xs-12 clearfix margin-bottom">
@@ -278,7 +269,6 @@
       <div class="container">
         <div class="row">
           <div class="fo-copyright-holder text-center">
-
             Copyright © 2017 l yourdomain.com. All rights reserved. </div>
         </div>
       </div>
@@ -288,5 +278,4 @@
     <a class="scrollup" href="#"></a><!-- end scroll to top of the page-->
   </div>
   <!--end site wrapper-->
-  </div>
 {% endblock %}
