--- a/join/static/css/corporate.css
+++ b/join/static/css/corporate.css
@@ -4021,16 +4021,16 @@ box-shadow: none;
     padding: 0;
 }
 .pages-tags li a {
-    background-color: #fff;
-    border: 1px solid #e9e9e9;
-    color: #727272;
+    background-color: #000;
+    border: 1px solid #000;
+    color: #fff;
     float: left;
     margin: 0 10px 10px 0;
     padding: 5px 15px;
 }
 .pages-tags li a:hover, .pages-tags li a.active {
-    background-color: #101010;
-    color: #727272;
+    background-color: #fff;
+    color: #000;
 }
 
 /*============ Site map ============ */
