--- a/join/static/css/theme-default.css
+++ b/join/static/css/theme-default.css
@@ -3093,8 +3093,9 @@ ul.footer-flickr {
 .sec-padding-6 {
 	padding: 30px 0 30px 0;
 }
-
-
+.sec-padding-7 {
+	padding: 1px 0 1px 0;
+}
 
 
 .sec-bpadding-2 {
