--- a/join/home/templates/partials/top_navbar.html
+++ b/join/home/templates/partials/top_navbar.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="mod-menu">
         <div class="row">
-          <div class="col-sm-2"> <a class="logo style-2 mar-4" href="{% url "home_view" %}" title=""> <img alt="" src="{% static "images/logo/join-logo.png" %}  "/> </a> </div>
+          <div class="col-sm-2"> <a class="logo style-2 mar-4" href="{% url "home_view" %}" title=""> <img alt="" src="{% static "images/logo/logo-join.png" %}  "/> </a> </div>
           <div class="col-sm-10">
             <div class="main-nav">
               <ul class="nav navbar-nav top-nav">
